# invyra-seed-supplier

./: PART_Q_01_Daily_Pilot_Checklist.md  README.md  __init__.py  engine.py  pyproject.toml
consumption/: __init__.py  models.py  query_service.py
docs/: PART_Q_CONTROLLED_PILOT_EXECUTION_v1.md  PART_Q_CONTROL_INDEX_v1.md  PART_Q_EXIT_GATE_CHECKLIST_v1.md  PART_Q_GOVERNANCE_VALIDATION_CHECKLIST_v1.md  PART_Q_INCIDENT_LOG_TEMPLATE_v1.md  PART_Q_KPI_AND_INCIDENT_TRACKING_v1.md  PART_Q_OPERATOR_WORKFLOW_EVIDENCE_CHECKLIST_v1.md  PART_Q_PILOT_COMPLETION_REPORT_TEMPLATE_v1.md  PART_Q_PILOT_ONBOARDING_CHECKLIST_v1.md  PART_Q_PILOT_PARTICIPANT_REGISTRY_v1.md  PART_Q_PILOT_ROLLBACK_CHECKLIST_v1.md  PART_Q_PILOT_SUPPORT_ESCALATION_MODEL_v1.md  PART_Q_WEEKLY_PILOT_REVIEW_TEMPLATE_v1.md  PHASE_T_COMPLETION.md  PHASE_U1_INVENTORY_CONSUMER_CONTRACT.md  PHASE_U2_INVENTORY_COMPATIBILITY_PROFILE.md  PHASE_U3_INVENTORY_READ_ADAPTER.md  PHASE_U4_INVENTORY_ADAPTER_CERTIFICATION.md  PHASE_U5_2_INVENTORY_RUNTIME_CONFIGURATION.md  PHASE_U5_3_INVENTORY_OPERATIONAL_ACCEPTANCE.md  PHASE_U5_4_INVENTORY_CONTROLLED_PILOT_RELEASE.md  PHASE_U_SCOPE.md
domain/: __init__.py  enums.py  models.py  transitions.py  validation.py
events/: __init__.py  audit.py
examples/: sdk_async_read_suppliers.py  sdk_read_suppliers.py
ingestion/: __init__.py  ingestion_service.py
integration/: __init__.py  sources.py
intelligence/: __init__.py  dedupe.py  normalization.py
policy/: __init__.py  rules.py
repository/: __init__.py  interfaces.py  json_file.py  memory_impl.py  serialization.py
services/: legal_service.py  lifecycle_service.py  moderation_service.py  permissions.py  pilot_service.py  provenance_service.py  (+3 more)
(+71 files in other folders)
