[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invyra-supplier-seed"
version = "0.1.0"
description = "Governed Invyra Supplier Seed System"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["supplier_seed*"]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
