[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invyra-supplier-seed"
version = "0.1.0"
description = "Governed Invyra Supplier Seed System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.urls]
Repository = "https://github.com/chrykoolaid/invyra-seed-supplier"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
]
build = [
  "build>=1.2,<2.0",
  "twine>=5.1,<7.0",
]

[tool.setuptools.packages.find]
include = ["supplier_seed*"]

[tool.setuptools.package-data]
supplier_seed = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --tb=short"
